# fastapi-k8s-app

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: cd.yml  ci.yml
app/: __init__.py  __main__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: __init__.py  auth.py  health.py  metrics.py  users.py
app/core/: __init__.py  config.py  database.py  logging_config.py  security.py
app/middleware/: __init__.py  security.py
app/migrations/: __init__.py  alembic.ini  env.py  script.py.mako
app/migrations/versions/: 001_initial_user_table.py  __init__.py
app/models/: __init__.py  user.py
app/observability/: __init__.py  telemetry.py
app/repositories/: __init__.py  base.py  user.py
app/schemas/: __init__.py
app/services/: __init__.py  user.py
app/utils/: __init__.py  dependencies.py
docs/: CLAUDE.md  FORMAT.md  INSTRUCTIONS.md  PROJECT_STRUCTURE.md  TEST.md
helm/fastapi-k8s-app/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-qa.yaml  values.yaml
helm/fastapi-k8s-app/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
kubernetes/dev/: deployment.yaml  ingress.yaml
kubernetes/prod/: deployment.yaml  ingress.yaml
kubernetes/qa/: deployment.yaml  ingress.yaml
scripts/: build-docker.sh  create-migration.sh  deploy-dev.sh  deploy-prod.sh  setup-minikube.sh  setup.sh
tests/api/: conftest.py  test_endpoints.py
tests/integration/: conftest.py  test_user_service.py
tests/unit/: conftest.py  test_models.py  test_security.py
